@@ -159,10 +159,10 @@
     <PreBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="$(WebKit_Source)\WTF\wtf\text\AtomicString.cpp" />
-    <ClCompile Include="$(WebKit_Source)\WTF\wtf\text\StringBuilder.cpp" />
-    <ClCompile Include="$(WebKit_Source)\WTF\wtf\text\StringImpl.cpp" />
-    <ClCompile Include="$(WebKit_Source)\WTF\wtf\text\WTFString.cpp" />
+    <ClCompile Include="$(ConfigurationBuildDir)\include\private\wtf\text\AtomicString.cpp" />
+    <ClCompile Include="$(ConfigurationBuildDir)\include\private\wtf\text\StringBuilder.cpp" />
+    <ClCompile Include="$(ConfigurationBuildDir)\include\private\wtf\text\StringImpl.cpp" />
+    <ClCompile Include="$(ConfigurationBuildDir)\include\private\wtf\text\WTFString.cpp" />
     <ClCompile Include="..\..\testRegExp.cpp" />
   </ItemGroup>
   <ItemGroup>
