@@ -1,3 +1,12 @@
+2013-04-19  Roger Fong  <roger_fong@apple.com>
+
+        Remove uses of WebKit_Source from AppleWin build in JavaScriptCore.
+
+        * JavaScriptCore.vcxproj/JavaScriptCore.make:
+        * JavaScriptCore.vcxproj/build-generated-files.sh:
+        * JavaScriptCore.vcxproj/copy-files.cmd:
+        * JavaScriptCore.vcxproj/testRegExp/testRegExp.vcxproj:
+
 2013-04-19  Benjamin Poulain  <bpoulain@apple.com>
 
         Rename JSStringJoiner::build() to join()
